# Nodeflux-Technical-Assessment

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.MD
.github/workflows/: cmake-build.yml  docker-image.yml
include/: fnz.hpp
include/fnz/: http.hpp
src/: base64.cpp  main.cpp
